[GR-8718] Drain the `sun.misc.Cleaner` reference queue.